added functionality to js: created array capable of generating questions and answers into the html quiz container. began working on determining correct or incorrect answers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <p id="information">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answer will penalize your score/time by ten seconds!</p>
             <br>
-            <div id="buttons">
+            <div class="buttons">
                 <button type="button" class="btn btn-primary rounded" id="start-quiz">Start Quiz</button>
             </div>
         </div>   
@@ -30,7 +30,7 @@
             <br><br>
             <h1 id="quiz-question"></h1>
             <br>
-            <div class="answer-buttons" id="buttons">
+            <div class="answer-buttons">
                 <button type="button" class="btn btn-primary rounded" id="opt1">test text</button>
                 <button type="button" class="btn btn-primary rounded" id="opt2">test text</button>
                 <button type="button" class="btn btn-primary rounded" id="opt3"></button>
