added functionality to check user answers against correct answers, adding a point or subtracting 10 seconds accordingly

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <button type="button" class="btn btn-primary rounded" id="opt2">test text</button>
                 <button type="button" class="btn btn-primary rounded" id="opt3"></button>
                 <button type="button" class="btn btn-primary rounded" id="opt4"></button>
+
+                <!-- add classes for all buttons add event listener use for loop query selector all -->
             </div>
         </div>    
 
