added local storage and dom manipulation to display and clear highscores

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         
-        <div class="main-container" id="all-done">
+        <div class="main-container" id="all-done-container">
             <h1>All Done!</h1>
             <p id="final-score-p"></p>
             <div class="form-inline">
@@ -53,8 +53,11 @@
             </div>
         </div>
 
-        <div class="main-container" id="highscores">
+        <div class="main-container" id="highscores-container">
             <h1>Highscores</h1>
+            <ol id="highscores-list">
+
+            </ol>
             <button type="button" class="btn btn-primary rounded" id="go-back">Go Back</button>
             <button type="button" class="btn btn-primary rounded" id="clear-highscores">Clear Highscores</button>
         </div>
